@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.65 2009/06/23 21:03:12 lebert Exp $
+$Id: ReleaseNotes,v 1.66 2009/06/23 21:30:09 lebert Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -22,6 +22,8 @@ New Features in $NEXT_VERSION
 
 
 Bugs fixed in $NEXT_VERSION
+
+  - Fix for SF bug #2687525: tipsfile parser error wrt to eof
 
   - Fix for SF bug #2222159: File was not reload when type was changed
     externaly
